[package]
name = "tomorrow"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
pc-keyboard = { version = "0.7", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
cc = "1.0"
